    * Mailings: Patient ID, Subject Code, Sent Date, Response Date, Berlin, ESS, Eligibility, Participation, Exclusion, Comments
    * Evaluations: Patient ID, Subject Code, Administration Type, Evaluation Type, Source, Administration Date, Receipt Date, Scored Date, AHI, Eligibility, Exclusion, Status, Comments
  * Data dictionary export updated to include mailings

== 0.7.8

* Enhancements
  * Update to Rails 3.2.6 and Contour 1.0.2
  * Links with confirm: now use data: { confirm: } to account for deprecations in Rails 4.0

== 0.7.7

* Enhancements
  * Visits can be filtered by visit type
  * Searching by phone number now returns results for patients, prescreens, mailings, calls, evaluations, and visits
  * Mailing comments are now displayed in the participant timeline, consistent with other event types
  * Creator of an event is now displayed on the participant timeline in the event details
  * PHI Access role added to grant de-identified access to retrieve aggregate counts

* Bug Fix
  * User is now a required field for clinics, doctors, choices, patients, prescreens, mailings, calls, evaluations, and visits

== 0.7.6

* Enhancements
  * Update to Rails 3.2.5 and Contour 1.0.1
  * Use Ruby 1.9.3-p194

== 0.7.5

* Bug Fix
  * Timeouts no longer cause an error when trying to login again

== 0.7.4

* Enhancements
  * Prescreen and Mailing Bulk Imports will now automatically preprend leading zeros to MRNs under the 8-digit length

* Bug Fix
  * MRNs are now required to have 8 digits, and be zero-padded

== 0.7.3

* Enhancements
  * Call Creator is now listed in the participant timeline and on the call show page
  * Calls can now be filtered and sorted by response

== 0.7.2

* Bug Fix
  * Prescreens, Mailings, Calls, Evaluations, and Visits no longer display if the associated patient has been deleted

== 0.7.1

* Bug Fix
  * Fix Registration page to use new Contour login attributes

== 0.7.0

* Enhancements
  * Using Contour 1.0.0 with Twitter-Bootstrap CSS and JS
